Fix items cut off by footer in mobile view

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -391,3 +391,7 @@ body {
         font-size:15px;
     }
 }
+
+.tab-content {
+    margin-bottom:20px;
+}
